<resources>
    <string name="app_name">HABBIT-BREAKIT</string>

    <!-- Main Activity Strings -->
    <string name="consume_button_tip">Tap and hold</string>
    <string name="too_early_to_smoke_warning">Too early to smoke</string>
    <string name="statistic_restore_success_message">Statistic successfuly restored</string>
    <string name="synchronization_message">Registration is required for statistic synchronization with server.
                                            Synchronized statistic can be restored in case of app reinstall</string>
    <string name="registration_process_hint">Registration is required for statistic synchronization
                                        with server. Synchronized statistic can be restored</string>
    <string name="restore_process_hint">Enter your registration data</string>
    <string name="register_button_label">Register</string>
    <string name="restore_button_label">Restore</string>
    <string name="modes_button_label">Modes</string>
    <string name="user_deleted_warning">Your account was successfuly deleted</string>
    <string name="statistic_delete_warning">Do you want to delete overall statistic?</string>
    <string name="user_delete_warning">Do you want to delete account?</string>

    <!-- Modes Activity Strings -->
    <string name="modes_activity_label">Choose mode</string>
    <string name="activate_button_label">Choose</string>
    <string name="activated_button_label">Activated</string>
    <string name="not_enough_statistic_warning">Not enough statistic collected for this mode.
                                                You need %d more</string>
    <string name="free_mode_name">Free</string>
    <string name="free_mode_description">This mode provide no limits for consumption. Main purpose
                                            of Free Mode is collecting statistic</string>
    <string name="control_mode_name">Control</string>
    <string name="control_mode_description">In control mode programm calculates your average
                                            consumption rate based on static and prevent you from
                                            smoking more</string>
    <string name="health_mode_name">Health</string>
    <string name="health_mode_description">If you want to quit smoking you should pick this Health
                                            Mode. Speacial algorythms will increase non-smoking interval
                                            over time and will help you decrease consumption in
                                            comfortable manner</string>
    <string name="delete_statistic_button_label">Delete statistic</string>
    <string name="restore_statistic_button_label">Restore statistic</string>
    <string name="delete_account_button_label">Delete account</string>
    <string name="statistic_cleared_warning">Statistic successfuly deleted</string>

    <!-- Registration Activity Strings -->
    <string name="registration_activity_label">Registration</string>
    <string name="registration_activity_label_for_statistic_restore">Restore</string>
    <string name="registration_success_message">Registration successfuly completed. Your consumption
                                                statistic will be synchronized with server</string>
    <string name="incorrect_name_warning">Name field must not be empty</string>
    <string name="no_data_for_user_warning">No data found</string>
    <string name="statistic_restored_warning">Statistic successfuly restored</string>
    <string name="incorrect_date_of_birth_warning">Choose correct date of birth, please</string>
    <string name="incorrect_gender_warning">Choose gender, please</string>
    <string name="incorrect_secret_answer_warning">Enter secret question\'s answer</string>
    <string name="hint_name">Name</string>
    <string name="hint_date_of_birth">Date of Birth:</string>
    <string name="hint_gender">Gender:</string>
    <string name="hint_day">Day</string>
    <string name="hint_month">Month</string>
    <string name="hint_year">Year</string>
    <string name="hint_answer">Answer</string>
    <string name="hint_secret_question">Secret Question</string>
    <string name="male_button_label">Male</string>
    <string name="female_button_label">Female</string>
    <string name="send_button_label">Registration</string>
    <string-array name="secret_question_array">
        <item>Mother\'s maiden name?</item>
        <item>On what street you lived in the third grade?</item>
        <item>In which country is your dream vacation?</item>
        <item>Brand of your first car?</item>
        <item>What\'s your favorite sport?</item>
    </string-array>
    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- Consumption Details Fragment Strings -->
    <string name="enter_all_data_warning">Enter all required data</string>
    <string name="details_saved_warning">Data saved</string>
    <string name="milligram_label">mg</string>
    <string name="input_label">Enter resin, CO and nicotine content of your cigarettes</string>
    <string name="resin_label">Resin (mg/cig)</string>
    <string name="nicotine_label">Nicotine (mg/cig)</string>
    <string name="save_button_label">Save</string>
    <string name="input_summary_label">Consumption overall:</string>
    <string name="resin_summary_label">resin</string>
    <string name="nicotine_summary_label">nicotine</string>
    <string name="discard_button_label">Discard</string>
    <string name="co_label">CO (mg/cig)</string>
    <string name="co_summary_label">CO</string>
    <string-array name="currency_label_array">
        <item>USD</item>
        <item>GBP</item>
        <item>RUB</item>
        <item>EUR</item>
    </string-array>

    <!-- Statistic Activity Strings -->
    <string name="statistic_activity_label">Overall statistic</string>
    <string name="delete_statistic_entry_warning">Delete statistic for this day?</string>

    <!-- General Strings -->
    <string name="no_internet_connection_warning">No internet connection available</string>
    <string name="downloading_process_warning">Downloading data</string>
    <string name="sending_process_warning">Sending data</string>
    <string name="server_side_error_warning">Error occurred on server. Trying to fix it</string>

    <!-- Content Description Strings -->
    <string name="consume_button_content_description">Consume button</string>
    <string name="free_mode_icon_content_description">Free Mode</string>
    <string name="control_mode_icon_content_description">Control Mode</string>
    <string name="health_mode_icon_content_description">Health Mode</string>

</resources>
