<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/standard_screen_background"
    android:id="@+id/main_pager_activity_drawer_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_pager_activity_toolbar" />

        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:id="@+id/main_pager_activity_view_pager">



        </android.support.v4.view.ViewPager>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/consume_button_icon_primary_color"
                android:background="@drawable/circle_ring_primary_color"
                android:paddingTop="30dp"
                android:paddingLeft="30dp"
                android:paddingStart="30dp"
                android:paddingRight="30dp"
                android:paddingEnd="30dp"
                android:paddingBottom="50dp"
                android:contentDescription="@string/consume_button_content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:id="@+id/main_pager_activity_user_name_text_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modes_button_label"
                    android:id="@+id/main_pager_activity_modes_button"
                    tools:ignore="RtlSymmetry"
                    style="@style/DrawerMenuButton" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_activity_label"
                    android:id="@+id/main_pager_activity_registraion_button"
                    tools:ignore="RtlSymmetry"
                    style="@style/DrawerMenuButton" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/restore_statistic_button_label"
                    android:id="@+id/main_pager_activity_restore_statistic_button"
                    tools:ignore="RtlSymmetry"
                    style="@style/DrawerMenuButton" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_account_button_label"
                    android:id="@+id/main_pager_activity_delete_account_button"
                    tools:ignore="RtlSymmetry"
                    style="@style/DrawerMenuButton" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_statistic_button_label"
                    android:id="@+id/main_pager_activity_delete_statistic_button"
                    tools:ignore="RtlSymmetry"
                    style="@style/DrawerMenuButton" />

            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>