<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/standard_screen_background"
    android:id="@+id/consumption_details_fragment_container_view">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/input_label"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:id="@+id/consumption_details_fragment_input_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resin_label"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:id="@+id/consumption_details_fragment_resin_label"/>

                    <EditText
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textColorHint="@color/colorTextSecondary"
                        android:id="@+id/consumption_details_fragment_resin_edit_text"
                        style="@style/RegistrationEditText" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nicotine_label"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:id="@+id/consumption_details_fragment_nicotine_label"/>

                    <EditText
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textColorHint="@color/colorTextSecondary"
                        android:id="@+id/consumption_details_fragment_nicotine_edit_text"
                        style="@style/RegistrationEditText" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:minWidth="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/save_button_label"
                android:id="@+id/consumption_details_fragment_save_button"
                android:theme="@style/RedButton" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_summary_label"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:id="@+id/consumption_details_fragment_input_summary_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:id="@+id/consumption_details_fragment_resin_text_view"
                        tools:text="0.0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resin_summary_label"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:id="@+id/consumption_details_fragment_resin_summary_label" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:id="@+id/consumption_details_fragment_nicotine_text_view"
                        tools:text="0.0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nicotine_summary_label"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:id="@+id/consumption_details_fragment_nicotine_summary_label" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:minWidth="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/discard_button_label"
                android:id="@+id/consumption_details_fragment_discard_button"
                android:theme="@style/RedButton" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>